// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils.index findRoute return direct route 1`] = `
Array [
  "BLP0530",
]
`;

exports[`utils.index findRoute reversed route should also work 1`] = `
Array [
  "BKM0500",
  "BMS0600",
  "BSW0545",
  "BWP0615",
  "BPB0700",
  "BAI0530",
  "BIA0515",
  "BAR0600",
  "BRG0700",
  "BGB0515",
  "BBA0515",
  "BAL0545",
]
`;

exports[`utils.index findRoute route with 5 stops 1`] = `
Array [
  "BLA0745",
  "BAW0515",
  "BWS0515",
  "BSM0530",
  "BMK0700",
]
`;

exports[`utils.index findRoute route with one stop over 1`] = `
Array [
  "BLP0530",
  "BPM0645",
]
`;

exports[`utils.index findRoute route with three stop overs 1`] = `
Array [
  "CLA0445",
  "CAW0445",
  "TWS0515",
]
`;

exports[`utils.index findRoute should not arrive to same city twice 1`] = `
Array [
  "BLP0530",
  "BPB0630",
  "BBG0715",
]
`;

exports[`utils.index getAllDestinations should return departureList and arrivalList 1`] = `
Object {
  "arrivalList": Array [
    "Amsterdam",
    "Paris",
    "Warsaw",
    "Brussels",
    "London",
    "Stockholm",
    "Prague",
    "Moscow",
    "Madrid",
    "Geneva",
    "Budapest",
    "Kyiv",
    "Lisbon",
    "Rome",
    "Athens",
    "Istanbul",
  ],
  "departureList": Array [
    "London",
    "Amsterdam",
    "Warsaw",
    "Stockholm",
    "Paris",
    "Brussels",
    "Prague",
    "Moscow",
    "Madrid",
    "Geneva",
    "Budapest",
    "Kyiv",
    "Lisbon",
    "Rome",
    "Athens",
    "Istanbul",
  ],
}
`;
